[package]
name = "sgauth"
version = "0.1.0"
authors = ["jtr109 <lyp_login@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "uuidv07"] }
dotenv = "0.14.1"
rand = "0.7.2"
jsonwebtoken = "6.0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7.4", features = ["v4"] }
actix-web = "1.0.8"
http = "0.1.18"
regex = "1.3.1"
lazy_static = "1.4.0"
